corrected user bubble alignment

--- a/client/src/public/stylesheets/mobilebot/_bubblesButtons-m.scss
+++ b/client/src/public/stylesheets/mobilebot/_bubblesButtons-m.scss
@@ -65,7 +65,7 @@
   margin-left: auto; /*right adjusts bubble*/
   margin-top: 10px;
   margin-bottom: 10px;
-  margin-right: 0px;
+  margin-right: 12px;
 }
 
 // .bubble-breaker-m {
